--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "eslint src/** test/** && mocha --require babel-core/register --recursive",
+    "test": "eslint src/** test/** && mocha --compilers js:babel-register --recursive",
     "start": "node server.js",
-    "watch": "NODE_ENV=development watchify src/index.js -t [ babelify --presets [ es2015 ] ] -t loose-envify -o build/bundle.js",
-    "build": "NODE_ENV=production browserify src/index.js -t [ babelify --presets [ es2015 ] ] -t loose-envify -t uglifyify | uglifyjs -cm > build/bundle.min.js"
+    "watch": "NODE_ENV=development watchify src/index.js -t babelify -t loose-envify -o build/bundle.js",
+    "build": "NODE_ENV=production browserify src/index.js -t babelify -t loose-envify -t uglifyify | uglifyjs -cm > build/bundle.min.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.7.2",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
